--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <body>
         <ul>
             <li><a href="index.html">Index</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html" class="about">About</a></li>
             <li><a href="offer.html">Offer</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
