--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <ul>
-            <li><a href="index.html" class="home">Index</a></li>
+            <li><a href="index.html" class="bold">Index</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="offer.html">Offer</a></li>
             <li><a href="contact.html">Contact</a></li>
