--- a/offer.html
+++ b/offer.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">Index</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="offer.html" class="offer">Offer</a></li>
+            <li><a href="offer.html" class="bold">Offer</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </body>
